<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/form_gradient">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:scrollbars="none">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="30dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/actividad_form_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="30dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="15dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/form_header"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:text="@string/actividad_form_title"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <!-- CAMPO: TIPO DE ACTIVIDAD -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/poppins"
                        android:text="@string/actividad_form_tipo_actividad_label"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layout_tipo_actividad"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:helperTextEnabled="true"
                        app:helperTextTextColor="#D32F2F">

                        <AutoCompleteTextView
                            android:id="@+id/autocomplete_tipo_actividad"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins"
                            android:hint="@string/tipo_actividad_hint"
                            android:inputType="none"
                            android:paddingStart="16dp"
                            android:paddingEnd="16dp"
                            android:textSize="14sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- CAMPO: PRIORIDAD -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/poppins"
                        android:text="@string/actividad_form_prioridad_label"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layout_prioridad_actividad"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:helperTextEnabled="true"
                        app:helperTextTextColor="#D32F2F">

                        <AutoCompleteTextView
                            android:id="@+id/autocomplete_prioridad_actividad"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins"
                            android:hint="@string/prioridad_actividad_hint"
                            android:inputType="none"
                            android:paddingStart="16dp"
                            android:paddingEnd="16dp"
                            android:textSize="14sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- CAMPO: FECHA -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/poppins"
                        android:text="@string/actividad_form_fecha_label"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layout_input_fecha"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:boxBackgroundMode="none"
                        app:helperTextEnabled="true"
                        app:helperTextTextColor="#D32F2F"
                        app:hintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/input_actividad_fecha"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/box_shadow"
                            android:clickable="true"
                            android:focusable="false"
                            android:hint="@string/actividad_form_date_hint"
                            android:inputType="date"
                            android:minHeight="48dp"
                            android:textSize="14sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- CAMPO: ESTADO -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/poppins"
                        android:text="@string/actividad_form_estado_label"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layout_estado_actividad"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:helperTextEnabled="true"
                        app:helperTextTextColor="#D32F2F">

                        <AutoCompleteTextView
                            android:id="@+id/autocomplete_estado_actividad"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins"
                            android:hint="@string/estado_actividad_hint"
                            android:inputType="none"
                            android:paddingStart="16dp"
                            android:paddingEnd="16dp"
                            android:textSize="14sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- CAMPO: DESCRIPCIÓN -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/poppins"
                        android:text="@string/actividad_form_descripcion_label"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layout_input_descripcion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:boxBackgroundMode="none"
                        app:helperTextEnabled="true"
                        app:helperTextTextColor="#D32F2F"
                        app:hintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/input_actividad_descripcion"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/box_shadow"
                            android.fontFamily="@font/poppins"
                            android:gravity="start|top"
                            android:hint="@string/hint_descripcion_actividad_form"
                            android:inputType="textMultiLine"
                            android:minLines="3"
                            android:textSize="14sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/submit_actividad_button"
                        style="@style/Widget.Material3.Button.ElevatedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="52dp"
                        android:layout_gravity="end"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/poppins"
                        android:paddingHorizontal="32dp"
                        android:text="@string/actividad_form_submitbutton_text"
                        android:textAllCaps="false"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/delete_actividad_button"
                        style="@style/Widget.Material3.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="52dp"
                        android:layout_gravity="end"
                        android:layout_marginTop="12dp"
                        android:fontFamily="@font/poppins"
                        android:paddingHorizontal="32dp"
                        android:text="Eliminar Actividad"
                        android:textAllCaps="false"
                        android:textColor="@color/button_red_color"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:visibility="gone" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </FrameLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>